fix layout fix stop button's vertical align fix Loading button's width

--- a/styles/timer.css
+++ b/styles/timer.css
@@ -22,6 +22,7 @@
 .icon-stop {
   color: #aaaaaa;
   font-size: 25px;
+  vertical-align: middle;
 }
 
 .icon-stop:hover {
